cli/tests/dynamic_import/permissions_data_local.ts.out
error: Uncaught (in promise) TypeError: Requires read access to "/local_file.ts", run again with the --allow-read flag
    at data:application/javascript;base64,aW1wb3J0ICJmaWxlOi8vL2xvY2FsX2ZpbGUudHMiOw==:1:0
await import(`data:application/javascript;base64,${btoa(code)}`);
^
    at async file:///[WILDCARD]/cli/tests/dynamic_import/permissions_data_local.ts:3:1
